# copilot

./: .editorconfig  .gitignore  Cargo.toml  README.txt
src/: copilot.rs  gh.rs  headers.rs  main.rs  prompts.rs  term.rs  urls.rs  utils.rs
