[package]
name = "copilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "stream"] }
serde_json = { version = "1.0.113" }
serde = { version = "1.0.196", features = ["derive"] }
rustyline = "13.0.0"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.33"
rand = "0.8.5"
futures = "0.3.30"
homedir = "0.2.1"